[package]
name = "rs1541"
version = "0.1.0"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Rust bindings and helper functions for accessing Commodore disk drives through OpenCBM"
repository  = "https://github.com/piersfinlayson/rs1541"
license = "GPL-3.0"
documentation = "https://docs.rs/rs1541"
keywords = ["commodore", "disk", "1541", "opencbm", "retro"]
categories = [
    "hardware-support",
    "asynchronous",
    "emulators",
    "development-tools",
    "filesystem"
]

[lib]
name = "rs1541"
path = "src/lib.rs"

[dependencies]
log = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
regex = "1.11"

[build-dependencies]
bindgen = "0.71"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }  # Required by examples/async
rustyline = "15"  # Required by examples/cli
anyhow = "1.0"  # Required by examples/cli
clap = { version = "4.5", features = ["derive"] }  # Required by examples/cli
env_logger = "0.11"  # Required by examples/cli
