[package]
name = "rs1541"
version = "0.3.2"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Rust bindings and helper functions for accessing Commodore disk drives"
repository  = "https://github.com/piersfinlayson/rs1541"
license = "GPL-3.0"
documentation = "https://docs.rs/rs1541"
keywords = ["commodore", "disk", "1541", "opencbm", "retro"]
categories = [
    "hardware-support",
    "asynchronous",
    "emulators",
    "development-tools",
    "filesystem"
]

[lib]
name = "rs1541"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[dependencies]
xum1541 = { version = "0.3.2", path = "../xum1541" }
log = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
regex = "1.11"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }  # Required by bin/cli
rustyline = "15"  # Required by bin/cli
env_logger = "0.11"  # Required by bin/cli

[build-dependencies]
bindgen = "0.71"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }  # Required by examples/async
ctrlc = "3.4" # Required by examples/statusloop
